[project]
name = "tele-bot-db"
version = "0.1.0"
description = ""
authors = [
    {name = "darkn",email = "1996kirito1996@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-telegram-bot (>=22.7,<23.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "tele_bot", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
